[package]
name = "uniform_logic"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "=1.0.30"
proc-macro2 = "=1.0.65"
serde = {version = "=1.0.156", features = ["derive"]}
serde_json = "=1.0.90"